		- added action to focus the project viewer tree; this allows for easier
		  keyboard navigation to select a node, thus making the actions
		  available via jEdit's action mechanism more useful.
		- import settings are now simplified and more flexible: PV now uses
		  globs to decide whether to import files and directories. Old config
		  is translated automatically.

		Bug fixes:
		- fixed possible problem in ReImporter (could lose nodes if they
		  were not VPTFile or VPTDirectory).
		- fix NPE in OpenWithEncodingAction.java
		- fixed bug: VPTNode.setParent() was not working correctly, making
		  renaming nodes not work right (and probably other stuff too).
		- removed unneeded check for ErrorList plugin in IconComposer
		- fixed project being saved twice when changing projects, leading to
		  loss of project data (thanks to Stefan for pointing this out).
		- properly clean up edit bus when unloading the plugin.
		- re-added the entry for the PV dockable to the plugin menu.
		- fixed possible ClassCastException in PVActions.openAllNodes()
		- plugin was not receiving EditorExiting message, so a workaround
		  was made to save project state when the EditorExitRequestedMessage
		  is received, but being careful to avoid the data loss bug that
		  we had in a previous version.
		- after loading the project, clear the open file list so that opening
		  a new view does not cause user-closed files that were on the list
		  to be re-opened.
		- when activating the plugin, check which other plugins have already
		  been loaded and create a fake "PluginUpdate" msg in the ProjectPlugin
		  class (the msg is *not* sent to the EditBus).
		- properly cleanup when closing dockable (e.g., when changing the
		  docking position; the current dockable is closed and a new one is
		  created, so we need to clean up after the old one)
		- ImportSettingsFilter: ignore case if the file VFS has the
		  "CASE_INSENSITIVE_CAP" capability set.