@@ -68,6 +68,10 @@ VERSION 2.1.0
 		- import settings are now simplified and more flexible: PV now uses
 		  globs to decide whether to import files and directories. Old config
 		  is translated automatically.
+		- created new widget to substitute the old project combo box; the new
+		  widget shows the menu created by the new GroupMenu class allowing
+		  the user to choose either groups or projects in the tree. As a result,
+		  removed a lot of code from the ProjectViewer class.
 
 		Bug fixes:
 		- fixed possible problem in ReImporter (could lose nodes if they
@@ -116,12 +120,17 @@ VERSION 2.1.0
 		  when they don't fit in the tree viewport. It's only enabled for the
 		  compact view mode, though, since it doesn't make a lot of sense for
 		  the other modes and it also doesn't work perfectly.
-		- updated a lot of developer documentation in the javadoc.
+		- updated a lot of developer documentation in the javadocs.
 		- created method to write strings to XML files, escaping any needed
 		  chars (instead of having the code copied all over as before)
 		- got rid of VPTNode.VPTNodeComparator; implemented the logic in
 		  each node implementation (much easier to understand now)
 		- focus text area after opening a file from the tree.
+		- new locking mechanism to avoid possible race conditions when loading
+		  a project in a separate thread.
+		- allow EditProjectAction to receive a default parent group for the
+		  project being created.
+		- made SearchAction.NodeFileSet public by request.
 
 VERSION 2.0.4
 	[marcelo vanzin]
